--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 		.work{
 			padding: 0;
 		}
+		.hrclass{
+			width: 40%;
+		}
 	</style>
 </head>
 
@@ -101,6 +104,7 @@
 	</nav>
 	<div id="aboutMe" class="container-fluid" style="text-align: center;"">
 		<h1>About Me</h1>
+		<hr class="hrclass">
 		<h3>Education</h3>
 		<ul style="text-align: center;">
 			<li>
@@ -114,6 +118,7 @@
 				</div>
 			</li>
 		</ul>
+		<hr class="hrclass">
 		<h3>Work Experience</h3>
 		<ul style="text-align: center;">
 			<li>
@@ -126,8 +131,9 @@
 				</div>
 			</li>
 		</ul>
+		<hr class="hrclass">
 		<h3>Trainings / Involvements</h3>
-		<ul style="text-align: center;">
+		<ul>
 			<li>
 				<div class="panel panel-default">
 			  		<div class="panel-body">
@@ -137,6 +143,8 @@
 			  		</div>
 				</div>
 			</li>
+		</ul>
+		<ul>
 			<li>
 				<div class="panel panel-default">
 			  		<div class="panel-body">
@@ -146,10 +154,12 @@
 			  		</div>
 				</div>
 			</li>
-		</ul>	
+		</ul><br><br>
+
 		<a href="resume.pdf" target="_blank" class="btn btn-info">View My Resume</a>	
 	</div>
 	<div id="mySkills" class="container-fluid">
+		<hr>
 		<h1>My Skills</h1>
 		  <div class="progress col-md-4">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -193,6 +203,7 @@
   		</div>
 	</div>
 	<div id="myWorks" class="container-fluid">
+		<hr>
 		<h1>My Works</h1>
 		<div class="container col-md-6 work">
 		<a href="https://lafuenter.github.io/capstone1/" target="_blank">
@@ -226,6 +237,7 @@
 		</div>
 	</div>
 	<div id="contacts" class="container-fluid">
+		<hr>
 		<h1>Contacts</h1>
 		<img src="images/resume.jpg" class="img-circle" width="10%">
 		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
