--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		<img src="images/resume.jpg" class="img-circle" width="10%">
 		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
 		<a href="tel:+639776190040">+63 (977) 619 0040 </a><br>
-		<a href="mailto:lafuente1101403@ceu.edu.ph">Email me here</a>
+		<a href="mailto:lafuente1101403@ceu.edu.ph">Email me here</a><br><br><br>
 	</div>
 
 
