--- a/index.html
+++ b/index.html
@@ -163,42 +163,42 @@
 		<h1>My Skills</h1>
 		  <div class="progress col-md-4">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-    		HTML5 (90%)
+    		HTML5 
     		</div>
   		</div>
   		<div class="progress col-md-4">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-    		CSS3 (85%)
+    		CSS3 
     		</div>
   		</div>
   		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-    		JavaScript (80%)
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+    		JavaScript
     		</div>
   		</div>
   		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100" style="width:83%">
-    		PHP (83%)
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:83%">
+    		PHP 
     		</div>
   		</div>
   		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width:82%">
-    		mySql (82%)
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width:82%">
+    		mySql
     		</div>
   		</div>
   		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100" style="width:88%">
-    		Bootstrap (88%)
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:88%">
+    		Bootstrap 
     		</div>
   		</div>
   		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-    		Jquery (80%)
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+    		Jquery 
     		</div>
   		</div>
   		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100" style="width:83%">
-    		Laravel (83%)
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:83%">
+    		Laravel
     		</div>
   		</div>
 	</div>
