--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<link rel="icon" type="images" href="images/resume.jpg" sizes="20x20">
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<script src="jquery-3.2.1.min.js"></script>
 	<style type="text/css">
 		body{
 			position: relative;
+			background-color: black;
+			color: white;
 		}
 		 #aboutMe,
 		 #mySkills, 
@@ -17,8 +20,12 @@
 		 	padding-top: 50px;
 		 	height: auto;
 		 	color: black;
-		 	background-color: white;
+		 	/*text-shadow: 0 0 2px white;*/
+		 	background-color: black;
 		 	text-align: center
+		 }
+		h1,h3 {
+		 	text-shadow: 0 0 5px white;
 		 }
 		 ul > li {
 		 	list-style-type: none;
@@ -27,7 +34,7 @@
 		 	padding-left: 0;
 		 }
 		 .panel{
-		 	width: 30%;
+		 	width: 100%;
 		 	margin: auto;
 		 }
 		 .badge{
@@ -41,7 +48,29 @@
 		 	opacity: 0;
   			position: absolute;
   			top: 50%;
-  			left: 30%;
+  			left: 50%;
+  			transform: translate(-50%, -50%);
+		 }
+		 .home{
+		 	padding-top: 50px;
+		 	position: relative;
+  			/*top: 50%;*/
+  			/*left: 100%;*/
+
+  			/*position: absolute;*/
+  			/*transform: translate(-50%, -50%);*/
+  			/*transform: translateX(50%);*/
+
+  		text-align: center;
+			width: 100%;
+			height: 650px;
+			/*margin-top: 30%;*/
+		 }
+		 .insidehomediv{
+		 	position: absolute;
+		 	top: 50%;
+		 	left: 50%;
+		 	transform: translate(-50%, -50%);
 		 }
 		 .container {
     		position: relative;
@@ -68,6 +97,51 @@
 		.hrclass{
 			width: 40%;
 		}
+		.progress{
+			margin-left: 0;
+		}
+		#contacts > p, .text > p{
+			color: white;
+		}
+		.rotate{
+			transition: all 0.5s ease-in-out;
+		}
+		.rotate:hover{
+			transform: rotateY(360deg);
+		}
+		hr{
+		 	border-top: 1px solid black;
+		 }
+		.greeting_text{
+			animation: type 3s steps(12);
+			overflow: hidden;
+			color: black;
+			white-space: nowrap;
+			border-right: 4px solid black;
+		}
+		.aboutMe,
+		.mySkills,
+		.myWorks,
+		.contacts{
+			animation: type 3s infinite;
+			overflow: hidden;
+			color: black;
+			left: 50%;
+			/*top: 0;*/
+			/*padding-top: 50px;*/
+			position: absolute;
+			white-space: nowrap;
+			border-right: 4px solid black;
+			transform: translate(-50%, -50%);
+		}
+		@keyframes type{
+			0%{
+				width: 0ch;
+			}
+			100%{
+				width: 12ch;
+			}
+		}
 	</style>
 </head>
 
@@ -80,7 +154,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button> 
-				<a class="navbar-brand" href="index.html">Ruel Lafuente</a>
+				<a class="navbar-brand homepageButton" href="#home">Ruel Lafuente</a>
 			</div>
 			<div>
 				<div class="collapse navbar-collapse" id="mynavbar">
@@ -102,14 +176,58 @@
 			</div>
 		</div>
 	</nav>
-	<div id="aboutMe" class="container-fluid" style="text-align: center;"">
-		<h1>About Me</h1>
+	<div class="home" id="home">
+		<div class="insidehomediv">
+		<!-- <img src="images/emoji.jpg" height="300px"> -->
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+		    <ol class="carousel-indicators">
+		      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		      <li data-target="#myCarousel" data-slide-to="1"></li>
+		      <li data-target="#myCarousel" data-slide-to="2"></li>
+		    </ol>
+
+		   <div class="carousel-inner">
+		      <div class="item active">
+		        <img src="images/emoji.jpg" class="img-thumbnail" style="height:350px;">
+		      </div>
+
+		      <div class="item">
+		        <img src="images/resume.jpg" class="img-thumbnail" style="height: 350px;">
+		      </div>
+		    
+		      <div class="item">
+		        <img src="images/ruel.jpg" class="img-thumbnail" style="height: 350px;">
+		      </div>
+		    </div>
+
+		    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+		      <span class="glyphicon glyphicon-chevron-left"></span>
+		      <span class="sr-only">Previous</span>
+		    </a>
+		    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+		      <span class="glyphicon glyphicon-chevron-right"></span>
+		      <span class="sr-only">Next</span>
+		    </a>
+		  </div>
+		<h1 class="greeting_text">Hi, I'm Ruel</h1>
+		<a href="#aboutMe" class="homeButton"><button class="btn btn-info">Want to Know More About Me</button></a>
+		</div>
+	</div>
+	<div class="col-md-2"></div>
+	<div class="col-md-8">
+	<div id="aboutMe" class="container-fluid col-md-12" style="text-align: center;">
+		<h1 class="aboutMe">About Me</h1>
 		<hr class="hrclass">
-		<h3>Education</h3>
+		<div class="col-md-6">
+		<h3 style="color: pink;">Education</h3>
 		<ul style="text-align: center;">
 			<li>
-				<div class="panel panel-default">
-			  		<div class="panel-body">
+				<div class="panel panel-success">
+			  		<div class="panel-body" style="background-color: pink;color: gray;">
+			  			<a href="http://www.ceu.edu.ph" target="_blank">
+			  				<img src="images/ceu.jpg" class="img-circle rotate" style="height: 100px;">
+			  			</a>
 			  			<h4>Bachelor of Science in Computer Engineering</h4>
 			  			<p>Centro Escolar University - Manila</p>
 			  			<p>Mendiola, Manila</p>
@@ -118,33 +236,27 @@
 				</div>
 			</li>
 		</ul>
-		<hr class="hrclass">
-		<h3>Work Experience</h3>
-		<ul style="text-align: center;">
-			<li>
-				<div class="panel panel-default">
-			  		<div class="panel-body">
-			  			<h4>Main Distribution Frame Support Group</h4>
-			  			<p>PLDT Paco</p>
-			  			<p>2015</p>
-			  		</div>
-				</div>
-			</li>
-		</ul>
-		<hr class="hrclass">
-		<h3>Trainings / Involvements</h3>
+		</div>
+		<!-- <hr class="hrclass"> -->
+		<div class="col-md-6" style="margin-bottom: 30px;">
+		<h3 style="color: #5fc6da">Training</h3>
 		<ul>
 			<li>
-				<div class="panel panel-default">
-			  		<div class="panel-body">
-			  			<h4>Tuitt Coding Bootcamp</h4>
-			  			<p>Tuitt Philippines</p>
+				<div class="panel panel-primary">
+			  		<div class="panel-body" style="background: #5fc6da;color: white;">
+			  			<a href="http://www.tuitt.com" target="_blank">
+			  				<img src="images/tuitt.png" class="img-thumbnail rotate" style="height: 100px;">
+			  			</a>
+			  			<h4>Tuitt - Coding Bootcamp Philippines &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h4>
+			  			<p>Tuitt Philippines Inc.</p>
+			  			<p>Timog Avenue, Quezon City</p>
 			  			<p>2017</p>
 			  		</div>
 				</div>
 			</li>
 		</ul>
-		<ul>
+		</div>
+	<!-- 	<ul>
 			<li>
 				<div class="panel panel-default">
 			  		<div class="panel-body">
@@ -154,64 +266,64 @@
 			  		</div>
 				</div>
 			</li>
-		</ul><br><br>
+		</ul><br><br> -->
 
-		<a href="resume.pdf" target="_blank" class="btn btn-info">View My Resume</a>	
+		<a href="resume.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
-	<div id="mySkills" class="container-fluid">
+		<div id="mySkills" class="container-fluid col-md-12">
 		<hr>
-		<h1>My Skills</h1>
-		  <div class="progress col-md-4">
+		<h1 class="mySkills">My Skills</h1><br><br><br>
+		  <div class="progress col-md-12">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
     		HTML5 
     		</div>
   		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
     		CSS3 
     		</div>
   		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-    		JavaScript
-    		</div>
-  		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:83%">
-    		PHP 
-    		</div>
-  		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width:82%">
-    		mySql
-    		</div>
-  		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:88%">
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
     		Bootstrap 
     		</div>
   		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-info" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+    		mySql
+    		</div>
+  		</div>
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+    		JavaScript
+    		</div>
+  		</div>
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
     		Jquery 
     		</div>
   		</div>
-  		<div class="progress col-md-4">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:83%">
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+    		PHP 
+    		</div>
+  		</div>
+  		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:75%">
     		Laravel
     		</div>
   		</div>
 	</div>
-	<div id="myWorks" class="container-fluid">
+	<div id="myWorks" class="container-fluid col-md-12">
 		<hr>
-		<h1>My Works</h1>
+		<h1 class="myWorks">My Works</h1><br><br><br>
 		<div class="container col-md-6 work">
 		<a href="https://lafuenter.github.io/capstone1/" target="_blank">
 		  <img src="images/bookeatlist.png" class="thumbnail" style="width:100%;">
 		 </a>
 		  <div class="middle">
 		    <div class="text">
-		    	<p><strong>Bookeatlist</strong> is a restaurant booking website</p>
+		    	<p><strong>Bookeatlist</strong>is a restaurant booking website</p>
 		    </div>
 		  </div>
 		</div>
@@ -221,31 +333,88 @@
 		  	</a>
 		  <div class="middle">
 		    <div class="text">
-		    <p><strong>PhotoSharing</strong> is a photo sharing site</p>
+		    <p><strong>PhotoSharing</strong> is photo sharing website</p>
 		    </div>
 		  </div>
 		</div>
-		<div class="container col-md-offset-3 col-md-6 work">
+		<div class="col-md-3"></div>
+		<div class="container col-md-6 work">
 			<a href="http://faceter.herokuapp.com/" target="_blank">
 			  <img src="images/click.png" class="thumbnail" style="width:100%;">
 			</a>
 		  <div class="middle">
 		    <div class="text">
-		    	<p><strong>Click</strong> is a social networking site</p>
+		    	<p><strong>Click</strong> is social networking site</p>
 		    </div>
 		  </div>
 		</div>
+		<!-- <div class="col-md-3"></div> -->
 	</div>
-	<div id="contacts" class="container-fluid">
+	<div id="contacts" class="container-fluid col-md-12">
 		<hr>
-		<h1>Contacts</h1>
-		<img src="images/resume.jpg" class="img-circle" width="10%">
+		<h1 class="contacts">Contacts</h1><br><br><br>
+		<img src="images/resume.jpg" class="img-circle rotate" style="height: 100px;box-shadow: 0 0 3px white;"><br><br>
 		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
 		<a href="tel:+639776190040">+63 (977) 619 0040 </a><br>
-		<a href="mailto:lafuente1101403@ceu.edu.ph">Email me here</a><br><br><br>
+		<a href="mailto:lafuente1101403@ceu.edu.ph">Email me here</a><br><br>
+		<a href="https://www.facebook.com/LafuenteR" target="_blank">
+			<img src="images/fb-icon.png" class="img-circle rotate" width="5%">
+		</a>
+		<a href="https://twitter.com/LafuenteR" target="_blank">
+			<img src="images/twitter-icon.png" class="img-circle rotate" width="5%">
+		</a>
+		<a href="https://github.com/LafuenteR" target="_blank">
+			<img src="images/git.png" class="img-circle rotate" width="5%">
+		</a>
 	</div>
-
-
-
+</div>
+<div class="col-md-2"></div>
+<script type="text/javascript">
+	$(document).ready(function(){
+  $('.nav li a').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
+    && location.hostname == this.hostname) {
+      var $target = $(this.hash);
+      $target = $target.length && $target
+      || $('[name=' + this.hash.slice(1) +']');
+      if ($target.length) {
+        var targetOffset = $target.offset().top;
+        $('html,body')
+        .animate({scrollTop: targetOffset}, 3000);
+       return false;
+      }
+    }
+  });
+    $('.homeButton').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
+    && location.hostname == this.hostname) {
+      var $target = $(this.hash);
+      $target = $target.length && $target
+      || $('[name=' + this.hash.slice(1) +']');
+      if ($target.length) {
+        var targetOffset = $target.offset().top;
+        $('html,body')
+        .animate({scrollTop: targetOffset}, 3000);
+       return false;
+      }
+    }
+  });
+    $('.homepageButton').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
+    && location.hostname == this.hostname) {
+      var $target = $(this.hash);
+      $target = $target.length && $target
+      || $('[name=' + this.hash.slice(1) +']');
+      if ($target.length) {
+        var targetOffset = $target.offset().top;
+        $('html,body')
+        .animate({scrollTop: targetOffset}, 3000);
+       return false;
+      }
+    }
+  });
+});
+</script>
 </body>
+
 </html>
