--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 		<img src="images/resume.jpg" class="img-circle rotate" style="height: 100px;box-shadow: 0 0 3px white;"><br><br>
 		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
 		<a href="tel:+639776190040">+63 (977) 619 0040 </a><br>
-		<a href="mailto:lafuente1101403@ceu.edu.ph">Email me here</a><br><br>
+		<a href="mailto:lafuente1101403@ceu.edu.ph">lafuente1101403@ceu.edu.ph</a><br><br>
 		<a href="https://www.facebook.com/LafuenteR" target="_blank">
 			<img src="images/fb-icon.png" class="img-circle rotate" width="5%">
 		</a>
