--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
 	<link rel="icon" type="images" href="images/resume.jpg" sizes="20x20">
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   	<script src="jquery-3.2.1.min.js"></script>
+  	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	<style type="text/css">
 		body{
 			position: relative;
 			background-color: black;
+			/*background-color: grey;*/
+			background-color: white;
 			color: white;
+			font-family: 'Roboto', sans-serif;
 		}
+
 		 #aboutMe,
 		 #mySkills, 
 		 #myWorks, 
 		 #contacts{
-		 	padding-top: 50px;
+		 	padding-top: 30px;
 		 	height: auto;
 		 	color: black;
 		 	/*text-shadow: 0 0 2px white;*/
 		 	background-color: black;
-		 	text-align: center
+		 	background-color: white;
+		 	text-align: center;
+		 	margin-bottom: 30px;
 		 }
+		 /*#contacts{
+		 	background: lightblue;
+		 }*/
 		h1,h3 {
 		 	text-shadow: 0 0 5px white;
+		 	font-family: 'Oswald', sans-serif;
 		 }
 		 ul > li {
 		 	list-style-type: none;
@@ -72,9 +84,11 @@
 		 	left: 50%;
 		 	transform: translate(-50%, -50%);
 		 }
-		 .container {
+		 .work {
     		position: relative;
-    		width: 50%;
+		}
+		.text{
+			color: black;
 		}
 
 		.image {
@@ -85,10 +99,14 @@
 		  	transition: .5s ease;
 		  	backface-visibility: hidden;
 		}
-		.container:hover .thumbnail {
+		.work:hover .thumbnail {
   			opacity: 0.5;
 		}
-		.container:hover .middle {
+		.active{
+			margin: auto;
+			text-align: center;
+		}
+		.work:hover .middle {
   			opacity: 1;
 		}
 		.work{
@@ -101,7 +119,7 @@
 			margin-left: 0;
 		}
 		#contacts > p, .text > p{
-			color: white;
+			color: black;
 		}
 		.rotate{
 			transition: all 0.5s ease-in-out;
@@ -112,14 +130,25 @@
 		hr{
 		 	border-top: 1px solid black;
 		 }
+		 .homeButton{
+		 	margin-top: 50px;
+		 }
 		.greeting_text{
-			animation: type 3s steps(12);
+			animation: type 5s steps(39);
 			overflow: hidden;
 			color: black;
 			white-space: nowrap;
-			border-right: 4px solid black;
+			border-right: 4px solid white;
 		}
-		.aboutMe,
+		.framework > a > img{
+			/*width: 100%;*/
+			height: 100px;
+			border-radius: 10px;
+		}
+		.carousel-inner > .active > img{
+			margin: auto;
+		}
+	/*	.aboutMe,
 		.mySkills,
 		.myWorks,
 		.contacts{
@@ -127,13 +156,13 @@
 			overflow: hidden;
 			color: black;
 			left: 50%;
-			/*top: 0;*/
+*/			/*top: 0;*/
 			/*padding-top: 50px;*/
-			position: absolute;
+	/*		position: absolute;
 			white-space: nowrap;
 			border-right: 4px solid black;
 			transform: translate(-50%, -50%);
-		}
+		}*/
 		@keyframes type{
 			0%{
 				width: 0ch;
@@ -160,7 +189,7 @@
 				<div class="collapse navbar-collapse" id="mynavbar">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="#aboutMe">About Me</a>
+							<a href="#aboutMe">About</a>
 						</li>
 						<li>
 							<a href="#mySkills">My Skills</a>
@@ -210,21 +239,20 @@
 		      <span class="sr-only">Next</span>
 		    </a>
 		  </div>
-		<h1 class="greeting_text">Hi, I'm Ruel</h1>
-		<a href="#aboutMe" class="homeButton"><button class="btn btn-info">Want to Know More About Me</button></a>
+		<h3 class="greeting_text">Hi, I'm Ruel,<br>an aspiring Web Developer</h3>
+		<a href="#aboutMe" class="homeButton"><button class="btn btn-info">Feel free to browse my page to know more about Me</button></a>
 		</div>
 	</div>
 	<div class="col-md-2"></div>
 	<div class="col-md-8">
-	<div id="aboutMe" class="container-fluid col-md-12" style="text-align: center;">
-		<h1 class="aboutMe">About Me</h1>
-		<hr class="hrclass">
+	<div id="aboutMe" class="container-fluid col-md-12 panel panel-warning" style="text-align: center;">
+		<h1 class="aboutMe">About</h1>
+		<!-- <hr class="hrclass"> -->
 		<div class="col-md-6">
-		<h3 style="color: pink;">Education</h3>
-		<ul style="text-align: center;">
-			<li>
-				<div class="panel panel-success">
-			  		<div class="panel-body" style="background-color: pink;color: gray;">
+		<h3>Education</h3>
+		<div class="panel panel-success ceu">
+					<!-- <div class="panel-body" style="background-color: pink;color: gray;"> -->
+			  		<div class="panel-body">
 			  			<a href="http://www.ceu.edu.ph" target="_blank">
 			  				<img src="images/ceu.jpg" class="img-circle rotate" style="height: 100px;">
 			  			</a>
@@ -234,44 +262,27 @@
 			  			<p>2011-2016</p>
 			  		</div>
 				</div>
-			</li>
-		</ul>
 		</div>
-		<!-- <hr class="hrclass"> -->
+		
 		<div class="col-md-6" style="margin-bottom: 30px;">
-		<h3 style="color: #5fc6da">Training</h3>
-		<ul>
-			<li>
-				<div class="panel panel-primary">
-			  		<div class="panel-body" style="background: #5fc6da;color: white;">
-			  			<a href="http://www.tuitt.com" target="_blank">
-			  				<img src="images/tuitt.png" class="img-thumbnail rotate" style="height: 100px;">
-			  			</a>
-			  			<h4>Tuitt - Coding Bootcamp Philippines &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h4>
-			  			<p>Tuitt Philippines Inc.</p>
-			  			<p>Timog Avenue, Quezon City</p>
-			  			<p>2017</p>
-			  		</div>
-				</div>
-			</li>
-		</ul>
+			<h3>Training</h3>
+			<div class="panel panel-primary tuitt">
+		  		<!-- <div class="panel-body" style="background: #5fc6da;color: white;"> -->
+		  		<div class="panel-body">
+		  			<a href="http://www.tuitt.com" target="_blank">
+		  				<img src="images/tuitt.png" class="img-thumbnail rotate" style="height: 100px;">
+		  			</a>
+		  			<h4>Tuitt - Coding Bootcamp Philippines &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h4>
+		  			<p>Tuitt Philippines Inc.</p>
+		  			<p>Timog Avenue, Quezon City</p>
+		  			<p>2017</p>
+		  		</div>
+			</div>
 		</div>
-	<!-- 	<ul>
-			<li>
-				<div class="panel panel-default">
-			  		<div class="panel-body">
-			  			<h4>Cisco RIVAN IT Bootcamp Training</h4>
-			  			<p>Rivan It Training Systems</p>
-			  			<p>2016</p>
-			  		</div>
-				</div>
-			</li>
-		</ul><br><br> -->
 
 		<a href="resume.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
-		<div id="mySkills" class="container-fluid col-md-12">
-		<hr>
+		<div id="mySkills" class="container-fluid col-md-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
 		  <div class="progress col-md-12">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -279,55 +290,62 @@
     		</div>
   		</div>
   		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+    		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:75%">
     		CSS3 
     		</div>
   		</div>
-  		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-    		Bootstrap 
-    		</div>
-  		</div>
-  		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-info" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+ 		<div class="progress col-md-12">
+    		<div class="progress-bar progress-bar-striped active progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
     		mySql
     		</div>
   		</div>
   		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+    		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
     		JavaScript
     		</div>
   		</div>
   		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-    		Jquery 
-    		</div>
-  		</div>
-  		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+    		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:65%">
     		PHP 
     		</div>
   		</div>
-  		<div class="progress col-md-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-    		Laravel
-    		</div>
+    		<div class="col-md-12">
+  			<div class="col-md-12">
+  				<h3>Frameworks</h3>
+  			</div>
+  			<div class="col-md-4 framework">
+  			<a href="http://getbootstrap.com/" target="_blank">
+  				<img src="images/bootstrap.png" title="Bootstrap">
+  			</a>
+  			</div>
+  			<div class="col-md-4 framework">
+  			<a href="https://jquery.com/" target="_blank">
+  				<img src="images/jquery.png" title="jQuery">
+  			</a>
+  			</div>
+  			<div class="col-md-4 framework">
+  			<a href="https://laravel.com/" target="_blank">
+  				<img src="images/laravel.png" title="Laravel">
+  			</a>
+  			</div>
   		</div>
 	</div>
-	<div id="myWorks" class="container-fluid col-md-12">
-		<hr>
-		<h1 class="myWorks">My Works</h1><br><br><br>
-		<div class="container col-md-6 work">
+	<div id="myWorks" class="col-md-12 panel panel-primary">
+		<!-- <hr> -->
+		<h1 class="myWorks">My Works</h1>
+		<p>These are the capstone projects I made</p>
+		<br><br><br>
+		<div class="col-md-6 work">
 		<a href="https://lafuenter.github.io/capstone1/" target="_blank">
 		  <img src="images/bookeatlist.png" class="thumbnail" style="width:100%;">
 		 </a>
 		  <div class="middle">
 		    <div class="text">
-		    	<p><strong>Bookeatlist</strong>is a restaurant booking website</p>
+		    	<p><strong>Bookeatlist</strong> is a restaurant booking website</p>
 		    </div>
 		  </div>
 		</div>
-		<div class="container col-md-6 work">
+		<div class="col-md-6 work">
 			<a href="http://photosharing.x10host.com/" target="_blank">
 		  		<img src="images/photosharing.png" class="thumbnail" style="width:100%;">
 		  	</a>
@@ -338,7 +356,7 @@
 		  </div>
 		</div>
 		<div class="col-md-3"></div>
-		<div class="container col-md-6 work">
+		<div class="col-md-6 work">
 			<a href="http://faceter.herokuapp.com/" target="_blank">
 			  <img src="images/click.png" class="thumbnail" style="width:100%;">
 			</a>
@@ -348,11 +366,11 @@
 		    </div>
 		  </div>
 		</div>
-		<!-- <div class="col-md-3"></div> -->
+		<div class="col-md-3"></div>
 	</div>
-	<div id="contacts" class="container-fluid col-md-12">
-		<hr>
-		<h1 class="contacts">Contacts</h1><br><br><br>
+	<div id="contacts" class="container-fluid col-md-12 panel panel-success">
+		<!-- <hr style="background-color: white;"> -->
+		<h1 class="contacts">Contact Information</h1><br><br><br>
 		<img src="images/resume.jpg" class="img-circle rotate" style="height: 100px;box-shadow: 0 0 3px white;"><br><br>
 		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
 		<a href="tel:+639776190040">+63 (977) 619 0040 </a><br>
@@ -369,7 +387,19 @@
 	</div>
 </div>
 <div class="col-md-2"></div>
+<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript">
+	window.sr = ScrollReveal({reset: true });
+	sr.reveal('.home',{duration: 2000});
+	sr.reveal('.ceu',{duration: 2000});
+	sr.reveal('.tuitt',{duration: 3000});
+	sr.reveal('#aboutMe',{duration: 1000});
+	sr.reveal('#mySkills',{duration: 1000});
+	sr.reveal('#myWorks',{duration: 1000});
+	sr.reveal('.progress',{duration: 2000});
+	sr.reveal('.framework',{duration: 2000});
+	sr.reveal('.work',{duration: 2000});
+	sr.reveal('#contacts',{duration: 2000});
 	$(document).ready(function(){
   $('.nav li a').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
