--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
 		<a href="#aboutMe" class="homeButton"><button class="btn btn-info">Feel free to browse my page to know more about Me</button></a>
 		</div>
 	</div>
-	<div class="col-md-2"></div>
-	<div class="col-md-8">
-	<div id="aboutMe" class="container-fluid col-md-12 panel panel-warning" style="text-align: center;">
+	<div class="col-md-2 col-sm-2"></div>
+	<div class="col-md-8 col-sm-8">
+	<div id="aboutMe" class="container-fluid col-md-12 col-sm-12 panel panel-warning" style="text-align: center;">
 		<h1 class="aboutMe">About</h1>
 		<!-- <hr class="hrclass"> -->
-		<div class="col-md-6">
+		<div class="col-md-6 col-sm-6">
 		<h3>Education</h3>
 		<div class="panel panel-success ceu">
 					<!-- <div class="panel-body" style="background-color: pink;color: gray;"> -->
@@ -264,7 +264,7 @@
 				</div>
 		</div>
 		
-		<div class="col-md-6" style="margin-bottom: 30px;">
+		<div class="col-md-6 col-sm-6" style="margin-bottom: 30px;">
 			<h3>Training</h3>
 			<div class="panel panel-primary tuitt">
 		  		<!-- <div class="panel-body" style="background: #5fc6da;color: white;"> -->
@@ -282,62 +282,62 @@
 
 		<a href="resume.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
-		<div id="mySkills" class="container-fluid col-md-12 panel panel-info">
+		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
-		  <div class="progress col-md-12">
+		  <div class="progress col-md-12 col-sm-12">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
     		HTML5 
     		</div>
   		</div>
-  		<div class="progress col-md-12">
+  		<div class="progress col-md-12 col-sm-12">
     		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:75%">
     		CSS3 
     		</div>
   		</div>
 
-  		<div class="progress col-md-12">
+  		<div class="progress col-md-12 col-sm-12">
     		<div class="progress-bar progress-bar-striped active progress-bar-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:65%">
 
     		mySql
     		</div>
   		</div>
-  		<div class="progress col-md-12">
+  		<div class="progress col-md-12 col-sm-12">
 
     		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
     		JavaScript
     		</div>
   		</div>
-  		<div class="progress col-md-12">
+  		<div class="progress col-md-12 col-sm-12">
 
     		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:65%">
     		PHP 
     		</div>
   		</div>
-  			<div class="col-md-12">
+  			<div class="col-md-12 col-sm-12">
   				<h3>Frameworks</h3>
   			</div>
-  			<div class="col-md-4 framework">
+  			<div class="col-md-4 col-sm-4 framework">
   			<a href="http://getbootstrap.com/" target="_blank">
   				<img src="images/bootstrap.png" title="Bootstrap">
   			</a>
   			</div>
-  			<div class="col-md-4 framework">
+  			<div class="col-md-4 col-sm-4 framework">
   			<a href="https://jquery.com/" target="_blank">
   				<img src="images/jquery.png" title="jQuery">
   			</a>
   			</div>
-  			<div class="col-md-4 framework">
+  			<div class="col-md-4 col-sm-4 framework">
   			<a href="https://laravel.com/" target="_blank">
   				<img src="images/laravel.png" title="Laravel">
   			</a>
   			</div>
 	</div>
-	<div id="myWorks" class="col-md-12 panel panel-primary">
+	<div id="myWorks" class="col-md-12 col-sm-12 panel panel-primary">
 		<!-- <hr> -->
 		<h1 class="myWorks">My Works</h1>
 		<p>These are the capstone projects I made</p>
 		<br><br><br>
-		<div class="col-md-6 work">
+		<div class="col-md-6 col-sm-6 work">
 		<a href="https://lafuenter.github.io/capstone1/" target="_blank">
 		  <img src="images/bookeatlist.png" class="thumbnail" style="width:100%;">
 		 </a>
@@ -347,7 +347,7 @@
 		    </div>
 		  </div>
 		</div>
-		<div class="col-md-6 work">
+		<div class="col-md-6 col-sm-6 work">
 			<a href="http://photosharing.x10host.com/" target="_blank">
 		  		<img src="images/photosharing.png" class="thumbnail" style="width:100%;">
 		  	</a>
@@ -357,8 +357,8 @@
 		    </div>
 		  </div>
 		</div>
-		<div class="col-md-3"></div>
-		<div class="col-md-6 work">
+		<div class="col-md-3 col-sm-3"></div>
+		<div class="col-md-6 col-sm-6 work">
 			<a href="http://faceter.herokuapp.com/" target="_blank">
 			  <img src="images/click.png" class="thumbnail" style="width:100%;">
 			</a>
@@ -368,9 +368,9 @@
 		    </div>
 		  </div>
 		</div>
-		<div class="col-md-3"></div>
+		<div class="col-md-3 col-sm-3"></div>
 	</div>
-	<div id="contacts" class="container-fluid col-md-12 panel panel-success">
+	<div id="contacts" class="container-fluid col-md-12 col-sm-12 panel panel-success">
 		<!-- <hr style="background-color: white;"> -->
 		<h1 class="contacts">Contact Information</h1><br><br><br>
 		<img src="images/resume.jpg" class="img-circle rotate" style="height: 100px;box-shadow: 0 0 3px white;"><br><br>
@@ -388,7 +388,7 @@
 		</a>
 	</div>
 </div>
-<div class="col-md-2"></div>
+<div class="col-md-2 col-sm-2"></div>
 <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript">
 	window.sr = ScrollReveal({reset: true });
