--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			</div>
 		</div>
 
-		<a href="resume.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
+		<a href="Ruelresumé.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
 		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
@@ -344,6 +344,30 @@
 		  <div class="middle">
 		    <div class="text">
 		    	<p><strong>Bookeatlist</strong> is a restaurant booking website</p>
+				<p>HTML5/Bootstrap</p>
+		    </div>
+		  </div>
+		</div>
+		<div class="col-md-6 col-sm-6 work">
+			<a href="http://www.lrvids.com/" target="_blank">
+			  <img src="images/lrvideos.png" class="thumbnail" style="width:100%;">
+			</a>
+		  <div class="middle">
+		    <div class="text">
+				<p><strong>Lrvideos</strong> is awebsite that share videos from youtube</p>
+				<p>HTML5/Bootstrap/Javascript/Laravel/Jquery/mySql</p>
+		    </div>
+		  </div>
+		</div>
+		<div class="col-md-6 col-sm-6 work">
+			<a href="http://faceter.herokuapp.com/" target="_blank">
+			  <img src="images/click.png" class="thumbnail" style="width:100%;">
+			</a>
+		  <div class="middle">
+		    <div class="text">
+		    	<p><strong>Click</strong> is social networking site</p>
+		    	<p>HTML5/Bootstrap/Javascript/Laravel/Jquery/mySql</p>
+
 		    </div>
 		  </div>
 		</div>
@@ -354,21 +378,11 @@
 		  <div class="middle">
 		    <div class="text">
 		    <p><strong>PhotoSharing</strong> is photo sharing website</p>
+			<p>HTML5/Bootstrap/Javascript/PHP/Jquery/mySql</p>
 		    </div>
 		  </div>
 		</div>
-		<div class="col-md-3 col-sm-3"></div>
-		<div class="col-md-6 col-sm-6 work">
-			<a href="http://faceter.herokuapp.com/" target="_blank">
-			  <img src="images/click.png" class="thumbnail" style="width:100%;">
-			</a>
-		  <div class="middle">
-		    <div class="text">
-		    	<p><strong>Click</strong> is social networking site</p>
-		    </div>
-		  </div>
-		</div>
-		<div class="col-md-3 col-sm-3"></div>
+
 	</div>
 	<div id="contacts" class="container-fluid col-md-12 col-sm-12 panel panel-success">
 		<!-- <hr style="background-color: white;"> -->
@@ -376,7 +390,7 @@
 		<img src="images/resume.jpg" class="img-circle rotate" style="height: 100px;box-shadow: 0 0 3px white;"><br><br>
 		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
 		<a href="tel:+639776190040">+63 (977) 619 0040 </a><br>
-		<a href="mailto:lafuente1101403@ceu.edu.ph">lafuente1101403@ceu.edu.ph</a><br><br>
+		<a href="mailto:lafuenter03@gmail.com">lafuenter03@gmail.com</a><br><br>
 		<a href="https://www.facebook.com/LafuenteR" target="_blank">
 			<img src="images/fb-icon.png" class="img-circle rotate" width="5%">
 		</a>
