--- a/index.html
+++ b/index.html
@@ -338,16 +338,29 @@
 		<p>These are the capstone projects I made</p>
 		<br><br><br>
 		<div class="col-md-6 col-sm-6 work">
-		<a href="https://lafuenter.github.io/capstone1/" target="_blank">
-		  <img src="images/bookeatlist.png" class="thumbnail" style="width:100%;">
+		<a href="http://www.nextquizapp.com/" target="_blank">
+		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;">
 		 </a>
 		  <div class="middle">
 		    <div class="text">
-		    	<p><strong>Bookeatlist</strong> is a restaurant booking website</p>
-				<p>HTML5/Bootstrap</p>
+		    	<p><strong>Nextquiz</strong> is a gaming website</p>
+				<p>Laravel/Bootstrap/mySql</p>
 		    </div>
 		  </div>
 		</div>
+
+		<div class="col-md-6 col-sm-6 work">
+			<a href="http://www.updateuuu.com" target="_blank">
+		  		<img src="images/updateu.png" class="thumbnail" style="width:100%;">
+		  	</a>
+		  <div class="middle">
+		    <div class="text">
+		    <p><strong>UpdateU</strong> is a website the update you in Movie,TV,Anime,Musci and Sports World</p>
+			<p>Laravel/Bootstrap/Javascript/mySql</p>
+		    </div>
+		  </div>
+		</div>
+
 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.lrvids.com/" target="_blank">
 			  <img src="images/lrvideos.png" class="thumbnail" style="width:100%;">
@@ -367,22 +380,9 @@
 		    <div class="text">
 		    	<p><strong>Click</strong> is social networking site</p>
 		    	<p>HTML5/Bootstrap/Javascript/Laravel/Jquery/mySql</p>
-
 		    </div>
 		  </div>
 		</div>
-		<div class="col-md-6 col-sm-6 work">
-			<a href="http://photosharing.x10host.com/" target="_blank">
-		  		<img src="images/photosharing.png" class="thumbnail" style="width:100%;">
-		  	</a>
-		  <div class="middle">
-		    <div class="text">
-		    <p><strong>PhotoSharing</strong> is photo sharing website</p>
-			<p>HTML5/Bootstrap/Javascript/PHP/Jquery/mySql</p>
-		    </div>
-		  </div>
-		</div>
-
 	</div>
 	<div id="contacts" class="container-fluid col-md-12 col-sm-12 panel panel-success">
 		<!-- <hr style="background-color: white;"> -->
