--- a/index.html
+++ b/index.html
@@ -339,17 +339,47 @@
 		<br><br><br>
 		<div class="col-md-6 col-sm-6 work">
 		<a href="http://www.nextquizapp.com/" target="_blank">
-		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<img src="images/nextquiz.png" class="thumbnail" style="width:100%;">
+				</div>
+				<div class="panel-footer">
+			    	<p><strong>Nextquiz</strong> is a gaming website</p>
+					<p>Created using Laravel/Bootstrap/mySql</p>
+				</div>
+			</div>
+<!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
 		 </a>
-		  <div class="middle">
+<!-- 		  <div class="middle">
 		    <div class="text">
 		    	<p><strong>Nextquiz</strong> is a gaming website</p>
 				<p>Laravel/Bootstrap/mySql</p>
 		    </div>
 		  </div>
-		</div>
+ -->		</div>
 
 		<div class="col-md-6 col-sm-6 work">
+		<a href="http://www.updateuuu.com" target="_blank">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<img src="images/updateu.png" class="thumbnail" style="width:100%;">
+				</div>
+				<div class="panel-footer">
+				    <p><strong>UpdateU</strong> will update you in Entertainment World</p>
+					<p>Created using Laravel/Bootstrap/Javascript/mySql</p>
+				</div>
+			</div>
+<!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
+		 </a>
+<!-- 		  <div class="middle">
+		    <div class="text">
+		    	<p><strong>Nextquiz</strong> is a gaming website</p>
+				<p>Laravel/Bootstrap/mySql</p>
+		    </div>
+		  </div>
+ -->		</div>
+
+<!-- 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.updateuuu.com" target="_blank">
 		  		<img src="images/updateu.png" class="thumbnail" style="width:100%;">
 		  	</a>
@@ -359,20 +389,64 @@
 			<p>Laravel/Bootstrap/Javascript/mySql</p>
 		    </div>
 		  </div>
-		</div>
+		</div> -->
 
+		<div class="col-md-6 col-sm-6 work">
+		<a href="http://www.lrvids.com/" target="_blank">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<img src="images/lrvideos.png" class="thumbnail" style="width:100%;">
+				</div>
+				<div class="panel-footer">
+				<p><strong>Lrvideos</strong> is a website that share videos from youtube</p>
+				<p>Created using laravel/Bootstrap/Jquery/mySql</p>
+				</div>
+			</div>
+<!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
+		 </a>
+<!-- 		  <div class="middle">
+		    <div class="text">
+		    	<p><strong>Nextquiz</strong> is a gaming website</p>
+				<p>Laravel/Bootstrap/mySql</p>
+		    </div>
+		  </div>
+ -->		</div>
+<!-- 
 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.lrvids.com/" target="_blank">
 			  <img src="images/lrvideos.png" class="thumbnail" style="width:100%;">
 			</a>
 		  <div class="middle">
 		    <div class="text">
-				<p><strong>UpdateU</strong> is a website that share videos from youtube</p>
+				<p><strong>Lrvideos</strong> is a website that share videos from youtube</p>
 				<p>HTML5/Bootstrap/Javascript/Laravel/Jquery/mySql</p>
 		    </div>
 		  </div>
 		</div>
-		<div class="col-md-6 col-sm-6 work">
+ -->		
+
+ 		<div class="col-md-6 col-sm-6 work">
+		<a href="http://faceter.herokuapp.com/" target="_blank">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<img src="images/click.png" class="thumbnail" style="width:100%;">
+				</div>
+				<div class="panel-footer">
+		    	<p><strong>Click</strong> is social networking site</p>
+		    	<p>Created using Laravel/Bootstrap/Javascript/mySql</p>
+				</div>
+			</div>
+<!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
+		 </a>
+<!-- 		  <div class="middle">
+		    <div class="text">
+		    	<p><strong>Nextquiz</strong> is a gaming website</p>
+				<p>Laravel/Bootstrap/mySql</p>
+		    </div>
+		  </div>
+ -->		</div>
+
+<!-- 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://faceter.herokuapp.com/" target="_blank">
 			  <img src="images/click.png" class="thumbnail" style="width:100%;">
 			</a>
@@ -383,7 +457,7 @@
 		    </div>
 		  </div>
 		</div>
-	</div>
+ -->	</div>
 	<div id="contacts" class="container-fluid col-md-12 col-sm-12 panel panel-success">
 		<!-- <hr style="background-color: white;"> -->
 		<h1 class="contacts">Contact Information</h1><br><br><br>
