--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 		<h1 class="myWorks">My Works</h1>
 		<p>These are the capstone projects I made</p>
 		<br><br><br>
-		<div class="col-md-6 col-sm-6 work">
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
 		<a href="http://www.nextquizapp.com/" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
@@ -358,7 +358,7 @@
 		  </div>
  -->		</div>
 
-		<div class="col-md-6 col-sm-6 work">
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
 		<a href="http://www.updateuuu.com" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
@@ -391,7 +391,7 @@
 		  </div>
 		</div> -->
 
-		<div class="col-md-6 col-sm-6 work">
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
 		<a href="http://www.lrvids.com/" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
@@ -425,7 +425,7 @@
 		</div>
  -->		
 
- 		<div class="col-md-6 col-sm-6 work">
+ 		<div class="col-md-6 col-sm-12 col-xs-12 work">
 		<a href="http://faceter.herokuapp.com/" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
