--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		      <span class="sr-only">Next</span>
 		    </a>
 		  </div>
-		<h3 class="greeting_text">Hi, I'm Ruel,<br>an aspiring Web Developer</h3>
+		<h3 class="greeting_text">Hi, I'm Ruel,<br>an aspiring iOS Developer</h3>
 		<a href="#aboutMe" class="homeButton"><button class="btn btn-info">Feel free to browse my page to know more about Me</button></a>
 		</div>
 	</div>
