--- a/index.html
+++ b/index.html
@@ -284,9 +284,14 @@
 	</div>
 		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
-		  <div class="progress col-md-12 col-sm-12">
+<!-- 		  <div class="progress col-md-12 col-sm-12">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
     		HTML5 
+    		</div>
+  		</div> -->
+		<div class="progress col-md-12 col-sm-12">
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+    		Swift
     		</div>
   		</div>
   		<div class="progress col-md-12 col-sm-12">
