--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			</div>
 		</div>
 
-		<a href="resume.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
+		<a href="RuelCV.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
 		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
@@ -290,7 +290,7 @@
     		</div>
   		</div> -->
 		<div class="progress col-md-12 col-sm-12">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
     		Swift
     		</div>
   		</div>
