--- a/index.html
+++ b/index.html
@@ -364,14 +364,18 @@
  -->		</div>
 
 		<div class="col-md-6 col-sm-12 col-xs-12 work">
-		<a href="http://www.updateuuu.com" target="_blank">
+<!-- 		<a href="http://www.updateuuu.com" target="_blank"> -->
+		<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
-					<img src="images/updateu.png" class="thumbnail" style="width:100%;">
+<!-- 					<img src="images/updateu.png" class="thumbnail" style="width:100%;"> -->
+					<img src="crossnumberlogo.png" class="thumbnail" style="width:100%;">
 				</div>
 				<div class="panel-footer">
-				    <p><strong>UpdateU</strong> will update you in Entertainment World</p>
-					<p>Created using Laravel/Bootstrap/Javascript/mySql</p>
+<!-- 				    <p><strong>UpdateU</strong> will update you in Entertainment World</p> -->
+					<p><strong>Crossnumbe Game</strong> is an iOS Game</p>
+<!-- 					<p>Created using Laravel/Bootstrap/Javascript/mySql</p> -->
+					<p>Created using Xcode(Swift)</p>
 				</div>
 			</div>
 <!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
