--- a/index.html
+++ b/index.html
@@ -342,26 +342,6 @@
 		<h1 class="myWorks">My Works</h1>
 		<p>These are the capstone projects I made</p>
 		<br><br><br>
-		<div class="col-md-6 col-sm-12 col-xs-12 work">
-		<a href="http://www.nextquizapp.com/" target="_blank">
-			<div class="panel panel-default">
-				<div class="panel-body">
-					<img src="images/nextquiz.png" class="thumbnail" style="width:100%;">
-				</div>
-				<div class="panel-footer">
-			    	<p><strong>Nextquiz</strong> is a gaming website</p>
-					<p>Created using Laravel/Bootstrap/mySql</p>
-				</div>
-			</div>
-<!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
-		 </a>
-<!-- 		  <div class="middle">
-		    <div class="text">
-		    	<p><strong>Nextquiz</strong> is a gaming website</p>
-				<p>Laravel/Bootstrap/mySql</p>
-		    </div>
-		  </div>
- -->		</div>
 
 		<div class="col-md-6 col-sm-12 col-xs-12 work">
 <!-- 		<a href="http://www.updateuuu.com" target="_blank"> -->
@@ -375,7 +355,7 @@
 <!-- 				    <p><strong>UpdateU</strong> will update you in Entertainment World</p> -->
 					<p><strong>Crossnumbe Game</strong> is an iOS Game</p>
 <!-- 					<p>Created using Laravel/Bootstrap/Javascript/mySql</p> -->
-					<p>Created using Xcode(Swift)</p>
+					<p>Created using Xcode (Swift 4)</p>
 				</div>
 			</div>
 <!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
@@ -387,6 +367,32 @@
 		    </div>
 		  </div>
  -->		</div>
+		
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
+<!-- 		<a href="http://www.nextquizapp.com/" target="_blank"> -->
+		<a href="https://itunes.apple.com/us/app/backward5/id1436319652" target="_blank">
+			<div class="panel panel-default">
+				<div class="panel-body">
+<!-- 					<img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
+					<img src="appiconlogo.png" class="thumbnail" style="width:100%;">
+				</div>
+				<div class="panel-footer">
+<!-- 			    	<p><strong>Nextquiz</strong> is a gaming website</p>
+					<p>Created using Laravel/Bootstrap/mySql</p> -->
+			    	<p><strong>Backward5</strong> is an iOS Game</p>
+					<p>Created using Xcode (Swift 4)</p>
+				</div>
+			</div>
+<!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
+		 </a>
+<!-- 		  <div class="middle">
+		    <div class="text">
+		    	<p><strong>Nextquiz</strong> is a gaming website</p>
+				<p>Laravel/Bootstrap/mySql</p>
+		    </div>
+		  </div>
+ -->		</div>
+
 
 <!-- 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.updateuuu.com" target="_blank">
@@ -400,7 +406,7 @@
 		  </div>
 		</div> -->
 
-		<div class="col-md-6 col-sm-12 col-xs-12 work">
+<!-- 		<div class="col-md-6 col-sm-12 col-xs-12 work">
 		<a href="http://www.lrvids.com/" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
@@ -410,16 +416,17 @@
 				<p><strong>Lrvideos</strong> is a website that share videos from youtube</p>
 				<p>Created using laravel/Bootstrap/Jquery/mySql</p>
 				</div>
-			</div>
+			</div> -->
 <!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
-		 </a>
+<!-- 		 </a> -->
 <!-- 		  <div class="middle">
 		    <div class="text">
 		    	<p><strong>Nextquiz</strong> is a gaming website</p>
 				<p>Laravel/Bootstrap/mySql</p>
 		    </div>
 		  </div>
- -->		</div>
+ -->		
+<!-- 		</div> -->
 <!-- 
 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.lrvids.com/" target="_blank">
@@ -434,7 +441,7 @@
 		</div>
  -->		
 
- 		<div class="col-md-6 col-sm-12 col-xs-12 work">
+<!--  		<div class="col-md-6 col-sm-12 col-xs-12 work">
 		<a href="http://faceter.herokuapp.com/" target="_blank">
 			<div class="panel panel-default">
 				<div class="panel-body">
@@ -444,16 +451,17 @@
 		    	<p><strong>Click</strong> is social networking site</p>
 		    	<p>Created using Laravel/Bootstrap/Javascript/mySql</p>
 				</div>
-			</div>
+			</div> -->
 <!-- 		  <img src="images/nextquiz.png" class="thumbnail" style="width:100%;"> -->
-		 </a>
+<!-- 		 </a> -->
 <!-- 		  <div class="middle">
 		    <div class="text">
 		    	<p><strong>Nextquiz</strong> is a gaming website</p>
 				<p>Laravel/Bootstrap/mySql</p>
 		    </div>
 		  </div>
- -->		</div>
+ -->		
+<!-- 		</div> -->
 
 <!-- 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://faceter.herokuapp.com/" target="_blank">
