--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
 	<div id="myWorks" class="col-md-12 col-sm-12 panel panel-primary">
 		<!-- <hr> -->
 		<h1 class="myWorks">My Works</h1>
-		<p>These are the capstone projects I made</p>
+<!-- 		<p>These are the capstone projects I made</p> -->
+		<p>These are the iOS App I developed</p> 
 		<br><br><br>
 
 		<div class="col-md-6 col-sm-12 col-xs-12 work">
