--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			</div>
 		</div>
 
-		<a href="RuelCV.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
+		<a href="RuelLafuenteCV.pdf.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
 		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
