--- a/index.html
+++ b/index.html
@@ -394,7 +394,20 @@
 		  </div>
  -->		</div>
 
-
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
+			<a href="https://itunes.apple.com/us/app/backward5/id1436319652" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="bgph.png" class="thumbnail" style="width:100%;">
+					</div>
+					<div class="panel-footer">
+					<p><strong>BG Bridal Gallery PH</strong></p>
+						<p>Created using Laravel</p>
+					</div>
+				</div>
+			 </a>
+		 </div>
+		
 <!-- 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.updateuuu.com" target="_blank">
 		  		<img src="images/updateu.png" class="thumbnail" style="width:100%;">
