--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 		<!-- <hr> -->
 		<h1 class="myWorks">My Works</h1>
 <!-- 		<p>These are the capstone projects I made</p> -->
-		<p>These are the iOS App I developed</p> 
+		<p>These are the iOS Apps and Projects I developed</p> 
 		<br><br><br>
 
 		<div class="col-md-6 col-sm-12 col-xs-12 work">
