--- a/index.html
+++ b/index.html
@@ -395,13 +395,69 @@
  -->		</div>
 
 		<div class="col-md-6 col-sm-12 col-xs-12 work">
-			<a href="https://itunes.apple.com/us/app/backward5/id1436319652" target="_blank">
+			<a href="https://bgbridalgallery.com/ph" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<img src="bgph.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery PH</strong></p>
+						<p>Created using Laravel</p>
+					</div>
+				</div>
+			 </a>
+		 </div>
+		
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
+			<a href="https://bgbridalgallery.com/us" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="bgus.png" class="thumbnail" style="width:100%;">
+					</div>
+					<div class="panel-footer">
+					<p><strong>BG Bridal Gallery US</strong></p>
+						<p>Created using Laravel</p>
+					</div>
+				</div>
+			 </a>
+		 </div>
+		
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
+			<a href="https://bgbridalgallery.com/jp" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="bgjp.png" class="thumbnail" style="width:100%;">
+					</div>
+					<div class="panel-footer">
+					<p><strong>BG Bridal Gallery JP</strong></p>
+						<p>Created using Laravel</p>
+					</div>
+				</div>
+			 </a>
+		 </div>
+		
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
+			<a href="https://gamenewsninja.com/" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="gnn.png" class="thumbnail" style="width:100%;">
+					</div>
+					<div class="panel-footer">
+					<p><strong>Game News Ninja</strong></p>
+						<p>Created using Laravel</p>
+					</div>
+				</div>
+			 </a>
+		 </div>
+
+		<div class="col-md-6 col-sm-12 col-xs-12 work">
+			<a href="https://chamoji.com" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="chamoji.png" class="thumbnail" style="width:100%;">
+					</div>
+					<div class="panel-footer">
+					<p><strong>Chamoji</strong></p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
