--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		      <span class="sr-only">Next</span>
 		    </a>
 		  </div>
-		<h3 class="greeting_text">Hi, I'm Ruel,<br>an aspiring iOS Developer</h3>
+		<h3 class="greeting_text">Hi, I'm Ruel,<br>a Web Developer and an aspiring iOS Developer</h3>
 		<a href="#aboutMe" class="homeButton"><button class="btn btn-info">Feel free to browse my page to know more about Me</button></a>
 		</div>
 	</div>
@@ -341,7 +341,7 @@
 		<!-- <hr> -->
 		<h1 class="myWorks">My Works</h1>
 <!-- 		<p>These are the capstone projects I made</p> -->
-		<p>These are the iOS Apps and Projects I developed</p> 
+		<p>These are the iOS Apps and the Web Development Projects I developed</p> 
 		<br><br><br>
 
 		<div class="col-md-6 col-sm-12 col-xs-12 work">
