--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 			 </a>
 		 </div>
 
-		<div class="col-md-6 col-sm-12 col-xs-12 work">
+<!-- 		<div class="col-md-6 col-sm-12 col-xs-12 work">
 			<a href="https://chamoji.com" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -462,7 +462,7 @@
 					</div>
 				</div>
 			 </a>
-		 </div>
+		 </div> -->
 		
 <!-- 		<div class="col-md-6 col-sm-6 work">
 			<a href="http://www.updateuuu.com" target="_blank">
