--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 						<img src="bgph.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>BG Bridal Gallery PH</strong></p>
+					<p><strong>BG Bridal Gallery PH</strong> is a wedding site</p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
@@ -415,7 +415,7 @@
 						<img src="bgus.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>BG Bridal Gallery US</strong></p>
+					<p><strong>BG Bridal Gallery US</strong> is a wedding site</p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
@@ -429,7 +429,7 @@
 						<img src="gnn.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>Game News Ninja</strong></p>
+					<p><strong>Game News Ninja</strong> is a gaming site</p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
@@ -443,7 +443,7 @@
 						<img src="chamoji.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>Chamoji</strong></p>
+					<p><strong>Chamoji</strong> is a gaming site</p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
@@ -457,7 +457,7 @@
 						<img src="bgjp.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>BG Bridal Gallery JP</strong></p>
+					<p><strong>BG Bridal Gallery JP</strong> is a wedding site</p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
