--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 			 </a>
 		 </div>
 		
-		<div class="col-md-6 col-sm-12 col-xs-12 work1">
+		<div class="col-md-6 col-sm-12 col-xs-12 work1" style="float: left;">
 			<a href="https://bgbridalgallery.com/jp" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -430,7 +430,7 @@
 						<img src="gnn.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>Game News Ninja</strong> is a gaming site</p>
+					<p><strong>Game News Ninja</strong></p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
@@ -444,7 +444,7 @@
 						<img src="chamoji.png" class="thumbnail" style="width:100%;">
 					</div>
 					<div class="panel-footer">
-					<p><strong>Chamoji</strong> is a gaming site</p>
+					<p><strong>Chamoji</strong></p>
 						<p>Created using Laravel</p>
 					</div>
 				</div>
