--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="five.png" class="thumbnail" style="width:100%;">
+						<img src="five.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Five Letters App</strong> is an iOS Game</p>
@@ -371,7 +371,7 @@
 			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="crossnumberlogo.png" class="thumbnail" style="width:100%;">
+						<img src="crossnumberlogo.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Crossnumbe Game</strong> is an iOS Game</p>
@@ -385,7 +385,7 @@
 			<a href="https://itunes.apple.com/us/app/backward5/id1436319652" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="appiconlogo.png" class="thumbnail" style="width:100%;">
+						<img src="appiconlogo.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>Backward5</strong> is an iOS Game</p>
@@ -399,7 +399,7 @@
 			<a href="https://bgbridalgallery.com/ph" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="bgph.png" class="thumbnail" style="width:100%;">
+						<img src="bgph.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery PH</strong> is a wedding site</p>
@@ -413,7 +413,7 @@
 			<a href="https://bgbridalgallery.com/us" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="bgus.png" class="thumbnail" style="width:100%;">
+						<img src="bgus.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery US</strong> is a wedding site</p>
@@ -427,7 +427,7 @@
 			<a href="https://bgbridalgallery.com/jp" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="bgjp.png" class="thumbnail" style="width:100%;">
+						<img src="bgjp.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>BG Bridal Gallery JP</strong> is a wedding site</p>
@@ -441,7 +441,7 @@
 			<a href="https://gamenewsninja.com/" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="gnn.png" class="thumbnail" style="width:100%;">
+						<img src="gnn.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>Game News Ninja</strong></p>
@@ -455,7 +455,7 @@
 			<a href="https://chamoji.com" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="chamoji.png" class="thumbnail" style="width:100%;">
+						<img src="chamoji.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 					<p><strong>Chamoji</strong></p>
