--- a/index.html
+++ b/index.html
@@ -366,6 +366,20 @@
 				</div>
 			 </a>
 		</div>
+		
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/ph/app/color-escape-game/id1487990289" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="colorEscapeLogo.png.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Color Escape Game</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift 4)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
 
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
 			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
