--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
 
 		<a href="RuelCV2025.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
-<!-- 		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
+/*		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
-<!-- 		  <div class="progress col-md-12 col-sm-12">
+ 		  <div class="progress col-md-12 col-sm-12">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
     		HTML5 
     		</div>
@@ -346,7 +346,7 @@
   				<img src="images/laravel.png" title="Laravel">
   			</a>
   			</div>
-	</div> -->
+	</div> */
 		
 	<div id="myWorks" class="col-md-12 col-sm-12 panel panel-primary">
 		<h1 class="myWorks">My Works</h1>
