--- a/index.html
+++ b/index.html
@@ -322,16 +322,74 @@
 				</div>
 			 </a>
 		</div>
+
 		
+
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
+			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="five.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="crossnumber2025" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
-						<p><strong>Five Letters App</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift 4)</p>
+						<p><strong>Crossnumber: Math Puzzle Game</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift/SpriteKit)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="memoraise2025" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Memo Raise: Memory Game</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift/SpriteKit)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+		
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/backward-word-game/id1436319652" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="backward2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Backward: Word Game</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift/SpriteKit)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/test-my-brain-quiz-game/id1520657502" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="testmybrain2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Test My Brain: Quiz Game</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift/SpriteKit)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/close-chat-offline-messenger/id1568510686" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="closechat2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Close Chat: Offline Messenger</strong> </p>
+						<p>Created using Xcode (Swift)</p>
 					</div>
 				</div>
 			 </a>
@@ -341,39 +399,11 @@
 			<a href="https://apps.apple.com/ph/app/color-escape-game/id1487990289" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="colorEscapeLogo.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="coloescape2025" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Color Escape Game</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift 4)</p>
-					</div>
-				</div>
-			 </a>
-		</div>
-
-		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<img src="crossnumberlogo.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
-					</div>
-					<div class="panel-footer">
-						<p><strong>Crossnumbe Game</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift 4)</p>
-					</div>
-				</div>
-			 </a>
-		</div>
-		
-		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://itunes.apple.com/us/app/backward5/id1436319652" target="_blank">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<img src="appiconlogo.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
-					</div>
-					<div class="panel-footer">
-					<p><strong>Backward5</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift 4)</p>
+						<p>Created using Xcode (Swift/SpriteKit)</p>
 					</div>
 				</div>
 			 </a>
