--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 			<a href="https://apps.apple.com/ph/app/color-escape-game/id1487990289" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="coloescape2025" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="coloescape2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Color Escape Game</strong> is an iOS Game</p>
