--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 					</div>
 					<div class="panel-footer">
 						<p><strong>Red Planet Hotels</strong></p>
-						<p>Created using Xcode (Swift 4)</p>
+						<p>Created using Xcode (Swift)</p>
 					</div>
 				</div>
 			 </a>
